[package]

name = "algebloat"
version = "0.0.1" #auto
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/RustAlgebloat"
documentation = "http://siegelord.github.io/RustAlgebloat/doc/algebloat/index.html"
keywords = ["algebra", "linear"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Rust linear algebra library"

[lib]

name = "algebloat"
path = "src/lib.rs"

[[example]]

name = "example"
path = "examples/example.rs"

[dependencies.algebloat_macros]

version = "=0.0.1" #auto
path = "../algebloat_macros"
