[package]

name = "algebloat_macros"
version = "0.0.9" #auto
license = "LGPL-3.0"
repository = "https://github.com/SiegeLord/RustAlgebloat"
documentation = "http://siegelord.github.io/RustAlgebloat/doc/algebloat/index.html"
keywords = ["algebra", "linear"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "RustAlgebloat utility macros"

[lib]

name = "algebloat_macros"
path = "src/lib.rs"
